--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,1 @@
-<div class="wrapper">
-	<header>
-		<img src="../img/logo.jpg" alt="Logo">
-		<h1>{{title}}</h1>
-	</header>
-	<article class="main-content-log">
-		<form name="login" class="login-layout" onsubmit="return validate()">
-			<label><b>Username:</b></label>
-			<input class="form-shape" type="text" placeholder=" Enter Username" id="uname" required><br>
-			<label><b>Password:</b></label>
-			<input class="form-shape" type="password" placeholder=" Enter Password" id="pswd" required><br><br>
-			<button class="form-shape btn-color" type="submit">Login</button><br><br>
-		</form>
-	</article>
-</div>
-<footer>
-	<p class="copyright">Created by Tech Ninjas Fresno</p>
-</footer>
+<app-login></app-login>
