created new components, routes, and paths

--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -10,6 +10,6 @@
         </ul>
     </aside>
     <div class="API-content">
-      <p>EMPLOYEES TEXT GOES HERE!!!</p>
+      <p>EQUIPMENT TEXT GOES HERE!!!</p>
     </div>
 </section>
