--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,6 +10,6 @@
         </ul>
     </aside>
     <div class="API-content">
-      <p>EMPLOYEES TEXT GOES HERE!!!</p>
+      <p>HOME TEXT GOES HERE!!!</p>
     </div>
 </section>
