updated data and rendered for Equipment and Vendors

--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -10,6 +10,23 @@
         </ul>
     </aside>
     <div class="API-content">
-      <p>EQUIPMENT TEXT GOES HERE!!!</p>
+      <table *ngIf='equipment && equipment.length'>
+        <thead>
+          <tr>
+            <th>Serial Number</th>
+            <th>Cost</th>
+            <th>Purchase Date</th>
+            <th>Warranty Length</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor='let equipment of equipment'>
+            <td>{{ equipment.serialNum }}</td>
+            <td>{{ equipment.cost | currency:'USD':true:'1.2-2' }}</td>
+            <td>{{ equipment.purchaseDate | date:'mm/dd/yyyy' }}</td>
+            <td>{{ equipment.warrantyLength }}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 </section>
