--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -10,6 +10,7 @@
         </ul>
     </aside>
     <div class="API-content">
+      <h2>Employees</h2><br>
       <table *ngIf='employees && employees.length'>
         <thead>
           <tr>
