--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,6 +10,7 @@
         </ul>
     </aside>
     <div class="API-content">
-      <p>HOME TEXT GOES HERE!!!</p>
+      <h2>Welcome to Your Dental Equipment Trakcing Home Page!!!</h2><br><br><br>
+      <p>Please Make a Selection from the Right</p><br><br><br><br><br><br><br><br><br><br><br><br>
     </div>
 </section>
