--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,7 @@ body {
 header {
   width: 100%;
   height: 50px;
+  min-height: 50px;
   padding-top: 10px;
   background-color: #364156;
   align-items: center;
@@ -29,7 +30,6 @@ header img {
   padding-bottom: 10px;
   width: 35px;
   height: auto;
-  border: 1px solid #011638;
 }
 footer {
   width: 100%;
