--- a/src/app/employees-form/employees-form.component.css
+++ b/src/app/employees-form/employees-form.component.css
@@ -21,6 +21,10 @@
     display: inline-flex;
 }
 .new-submission button {
-    width: 75%;
-    text-align: auto;
+    width: 20%;
+    margin: 5px;
+}
+.new-submission a {
+    text-decoration: none;
+    color: inherit;
 }
